--- a/landing-platzi/styles.css
+++ b/landing-platzi/styles.css
@@ -6,19 +6,40 @@ body {
     background: #23475b;
     color: white;
     padding: 32px 15px;
+    display: grid;
+    grid-template-columns: minmax(auto, 1024px);
+    justify-content: center;
+}
+.hero-container {
+    display: grid;
+    grid-template-columns: 70px 1fr 320px;
+    grid-template-areas:"badge title form"
+                        ". description form"
+                        ". countdown form";
+    grid-gap: 10px;
+}
+.badge {
+    grid-area: badge;
+}
+.badge img {
+    max-width: 70px;
 }
 .title {
+    grid-area: title;
     font-size: 36px;
     font-weight: normal;
     margin: 0;
     display: flex;
     align-items: center;
+    /* border: 2px solid red; */
 }
 .form {
+    grid-area: form;
     text-align: center;
     background: rgba(255, 255, 255, .9);
     padding: 1.5em;
     border-radius: 10px;
+    /* border: 2px solid red; */
 }
 .form input {
     width: 100%;
@@ -28,11 +49,13 @@ body {
     border-radius: 5px;
     box-sizing: border-box;
     margin-bottom: 10px;
+    /* border: 2px solid red; */
 }
 .form p {
     font-size: 20px;
     color: #3a3b3f;
     margin-bottom: 1em;
+    /* border: 2px solid red; */
 }
 .form button {
     background: #98ca3f;
@@ -43,4 +66,43 @@ body {
     font-size: 16px;
     border-bottom: 5px solid #6d932b;
     display: inline-block;
+    /* border: 2px solid red; */
+}
+.countdown {
+    grid-area: countdown;
+}
+.countdown p {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 300;
+    /* border: 2px solid red; */
+}
+.countdown span {
+    font-size: 33px;
+    /* border: 2px solid red; */
+}
+.countdown span:after {
+    content: ":";
+    display: inline-block;
+    margin: 0 5px;
+    /* border: 2px solid red; */
+}
+.countdown span:last-child::after {
+    display: none;
+}
+p {
+    margin: 0;
+    /* border: 2px solid red; */
+}
+.description {
+    grid-area: description;
+}
+@media screen and (max-width: 768px) {
+    .hero-container {
+    grid-template-columns: 70px 1fr;
+    grid-template-areas:"badge title"
+                        "description description"
+                        "form form"
+                        "countdown countdown";
+    }
 }
